-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Query Execution
-
Query Execution
-
Fully Compatible
-
ALL
-
QE 2025-09-01
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized scalar field
The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/exec/sbe/stages/lookup_hash_table.h:138: UNINIT_CTOR 145369 Class member declaration for "_hashTableSearched".
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/exec/sbe/stages/lookup_hash_table.h:80: UNINIT_CTOR 145369 Non-static class member "_hashTableSearched" is not initialized in this constructor nor in any functions that it calls.
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/exec/sbe/stages/lookup_hash_table.h:141: UNINIT_CTOR 145369 Class member declaration for "_outerKeyTag".
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/exec/sbe/stages/lookup_hash_table.h:80: UNINIT_CTOR 145369 Non-static class member "_outerKeyTag" is not initialized in this constructor nor in any functions that it calls.
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/exec/sbe/stages/lookup_hash_table.h:143: UNINIT_CTOR 145369 Class member declaration for "_outerKeyVal".
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/exec/sbe/stages/lookup_hash_table.h:80: UNINIT_CTOR 145369 Non-static class member "_outerKeyVal" is not initialized in this constructor nor in any functions that it calls.
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/exec/sbe/stages/lookup_hash_table.h:145: UNINIT_CTOR 145369 Class member declaration for "_outerKeyIsArray".
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/exec/sbe/stages/lookup_hash_table.h:80: UNINIT_CTOR 145369 Non-static class member "_outerKeyIsArray" is not initialized in this constructor nor in any functions that it calls.
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/exec/sbe/stages/lookup_hash_table.h:150: UNINIT_CTOR 145369 Class member declaration for "_hashTableMatchVectorIdx".
/data/mci/9292c3def3822c0dfd66af88847bcc64/bazel_cache/004acac643584f695e6309f72694e5ad/execroot/_main/src/mongo/db/exec/sbe/stages/lookup_hash_table.h:80: UNINIT_CTOR 145369 Non-static class member "_hashTableMatchVectorIdx" is not initialized in this constructor nor in any functions that it calls.