SERVER-109127 Coverity analysis defect 145369: Uninitialized scalar field (#40208)

GitOrigin-RevId: 09f45927889c643fb73f9d9397308e7618c4311a